[gd_scene load_steps=2 format=3 uid="uid://cm3yj5w4x2p8r"]

[ext_resource type="Script" path="res://assets/ui/game_over.gd" id="1_gameover"]

[node name="GameOver" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.05, 0.2, 0.95)
script = ExtResource("1_gameover")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -250.0
offset_right = 350.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Title" type="Label" parent="Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "The Prime Radiant Has Spoken"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WinnerLabel" type="Label" parent="Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Protagonist Prevails!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Final Score: 21 - 15"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="ButtonsHBox" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2
alignment = 1

[node name="NewGameButton" type="Button" parent="Panel/VBox/ButtonsHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "New Calculation"

[node name="Spacer" type="Control" parent="Panel/VBox/ButtonsHBox"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="MainMenuButton" type="Button" parent="Panel/VBox/ButtonsHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Return to Trantor"
